force-app/main/default/objects/Event_Vendor__c/fields/Agreed_cost__c.field-meta.xml
<CustomField>
    <fullName>Agreed_cost__c</fullName>
    <label>Agreed cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>