force-app/main/default/objects/Event_Vendor__c/fields/Confirm_Low_Quality_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Low_Quality_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Low Quality Vendor</label>
    <type>Checkbox</type>
</CustomField>