force-app/main/default/objects/Event_Vendor__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vendor__c.Vendor_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vendor__c</referenceTo>
    <relationshipLabel>Event Vendors</relationshipLabel>
    <relationshipName>Event_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>