force-app/main/default/objects/Event_Vendor__c/fields/Vendor_Category_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Category_Hidden__c</fullName>
    <label>Vendor Category (Hidden)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>