force-app/main/default/objects/Event_Vendor__c/validationRules/Vendor_Must_Be_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_Must_Be_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Vendor__c)),
  NOT(ISPICKVAL(Vendor__r.Vendor_Status__c, &quot;Approved&quot;))
)</errorConditionFormula>
    <errorMessage>Cannot assign a vendor that is not Approved. Please select an Approved vendor.</errorMessage>
</ValidationRule>